[gd_scene load_steps=4 format=3 uid="uid://x7hkyxjyfcof"]

[ext_resource type="Script" path="res://scenes/settings.gd" id="1_1rncm"]
[ext_resource type="Environment" uid="uid://bgsr6s7o877ta" path="res://world_environment.tres" id="2_2txda"]
[ext_resource type="FontFile" uid="uid://dfvkq8aj67fa2" path="res://fonts/futurespore.regular.ttf" id="3_ye0b1"]

[node name="Settings" type="Node3D"]
script = ExtResource("1_1rncm")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, -6.97574e-16, -1.5246e-23, -1.5246e-23, -4.37114e-08, 1, -6.97574e-16, -1, -4.37114e-08, 2.08165e-12, 25, 2.08165e-12)
light_cull_mask = 4294966783

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, -6.97574e-16, -1.5246e-23, -1.5246e-23, -4.37114e-08, 1, -6.97574e-16, -1, -4.37114e-08, 2.08165e-12, 130, 2.08165e-12)
fov = 30.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("2_2txda")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="OptionsContainer" type="GridContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -95.5
offset_top = -24.5
offset_right = 95.5
offset_bottom = 24.5
grow_horizontal = 2
grow_vertical = 2
columns = 2

[node name="WindowSizeLabel" type="Label" parent="CanvasLayer/OptionsContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ye0b1")
theme_override_font_sizes/font_size = 25
text = "Window size:"

[node name="WindowSizeOptionButton" type="OptionButton" parent="CanvasLayer/OptionsContainer"]
layout_mode = 2

[node name="FullScreenLabel" type="Label" parent="CanvasLayer/OptionsContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ye0b1")
theme_override_font_sizes/font_size = 25
text = "Full Screen:"

[node name="FullScreenButton" type="CheckButton" parent="CanvasLayer/OptionsContainer"]
layout_mode = 2

[node name="BackContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -22.5
offset_top = -40.0
offset_right = 22.5
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 30

[node name="BackButton" type="Button" parent="CanvasLayer/BackContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ye0b1")
theme_override_font_sizes/font_size = 40
text = "Back"

[connection signal="item_selected" from="CanvasLayer/OptionsContainer/WindowSizeOptionButton" to="." method="_on_window_size_option_button_item_selected"]
[connection signal="toggled" from="CanvasLayer/OptionsContainer/FullScreenButton" to="." method="_on_full_screen_button_toggled"]
[connection signal="pressed" from="CanvasLayer/BackContainer/BackButton" to="." method="_on_back_button_pressed"]
